--- a/site/themes/gikme/templates/player.html
+++ b/site/themes/gikme/templates/player.html
@@ -1,7 +1,7 @@
-{% if article.attachment and article.mime.startswith('audio') %}
+{% if article.enclosure and article.mime.startswith('audio') %}
 <div class="audio-player">
     <audio controls="" tabindex="0">
-    <source src="{{article.attachment}}" type="{{article.mime}}"></source>
+    <source src="{{article.enclosure}}" type="{{article.mime}}"></source>
     </audio>
 </div>
 {% endif %}
