--- a/site/themes/gikme/templates/base.html
+++ b/site/themes/gikme/templates/base.html
@@ -9,8 +9,8 @@
     <meta charset="utf-8" />
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
     <link href='{{ SITEURL }}' rel='canonical'/>
-    <link rel="shortcut icon" href="{filename}/favicon.ico" />
-    <link rel='icon' type='image/x-icon' href='{filename}/favicon.ico'/>
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel='icon' type='image/x-icon' href='/favicon.ico'/>
     {% if FEED_ALL_ATOM %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} полный Atom Feed" />
     {% endif %}
