--- a/site/themes/gikme/templates/article_intro.html
+++ b/site/themes/gikme/templates/article_intro.html
@@ -1,2 +1,3 @@
 {% extends "article_template.html" %}
-{% block article_content %}{{ article.summary }}{% endblock %}
+{% block article_content %}{{ article.summary }}<br/><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Постоянная ссылка на &quot;{{ article.title }}&quot;">Дочитать/Прослушать...</a>{% endblock %}
+
