--- a/site/themes/gikme/templates/article.html
+++ b/site/themes/gikme/templates/article.html
@@ -13,6 +13,16 @@
   {% for tag in article.tags %}
     <meta name="tags" contents="{{tag}}" />
   {% endfor %}
+  {% if article.title %}
+      <meta property="og:title" content="{{article.title}}" />
+  {% endif %}
+  {% if article.mime %}
+      <meta property="og:type" content="{{article.mime.replace('/', '.')}}" />
+  {% endif %}
+  {% if article.image %}
+      <meta property="og:image" content="{{article.image}}" />
+  {% endif %}
+  <meta property="og:url" content="{{SITEURL}}{{article.url}}" />
 {% endblock %}
 
 {% block title %}{{ SITENAME }} &middot; {{ article.title }}{% endblock %}
