--- a/site/themes/gikme/templates/base.html
+++ b/site/themes/gikme/templates/base.html
@@ -8,6 +8,7 @@
     {% block head %}
     <meta charset="utf-8" />
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+    <meta property="og:site_name" content="{{ SITENAME }}" />
     <link href='{{ SITEURL }}' rel='canonical'/>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel='icon' type='image/x-icon' href='/favicon.ico'/>
