--- a/site/themes/gikme/templates/base.html
+++ b/site/themes/gikme/templates/base.html
@@ -12,30 +12,32 @@
     <link href='{{ SITEURL }}' rel='canonical'/>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel='icon' type='image/x-icon' href='/favicon.ico'/>
-    {% if FEED_ALL_ATOM %}
+    {# {% if FEED_ALL_ATOM %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} полный Atom Feed" />
     {% endif %}
-    {% if FEED_ALL_RSS %}
-    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} полный RSS Feed" />
-    {% endif %}
+    {% if FEED_ALL_RSS %} #}
+    <link href="http://feeds.feedburner.com/gikmeblog" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} полный RSS Feed" />
+    {# {% endif %}
     {% if FEED_ATOM %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
     {% endif %}
     {% if FEED_RSS %}
     <link href="{{ FEED_DOMAIN }}/{{ FEED_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
-    {% endif %}
-    {% if CATEGORY_FEED_ATOM and category %}
+    {% endif %} #}
+    {# {% if CATEGORY_FEED_ATOM and category %}
     <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_ATOM|format(category.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed раздела &quot;{{category|cat_name}}&quot;" />
-    {% endif %}
-    {% if CATEGORY_FEED_RSS and category %}
+    {% endif %} #}
+    {% if CATEGORY_FEED_RSS and category and category == 'podcast' %}
+    <link href="http://feeds.feedburner.com/gikme" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} полный RSS Feed" />
+    {% else %}
     <link href="{{ FEED_DOMAIN }}/{{ CATEGORY_FEED_RSS|format(category.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed раздела &quot;{{category|cat_name}}&quot;" />
     {% endif %}
-    {% if TAG_FEED_ATOM and tag %}
+    {# {% if TAG_FEED_ATOM and tag %}
     <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_ATOM|format(tag.slug) }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed тега &quot;{{tag}}&quot;" />
     {% endif %}
     {% if TAG_FEED_RSS and tag %}
     <link href="{{ FEED_DOMAIN }}/{{ TAG_FEED_RSS|format(tag.slug) }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed тега &quot;{{tag}}&quot;" />
-    {% endif %}
+    {% endif %} #}
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/screen.css" type="text/css" />
     <link rel="stylesheet" href="{{ SITEURL }}/theme/css/pygments.css" type="text/css" />
     {% endblock head %}
