--- a/site/themes/gikme/templates/base.html
+++ b/site/themes/gikme/templates/base.html
@@ -9,6 +9,8 @@
     <meta charset="utf-8" />
     <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
     <meta property="og:site_name" content="{{ SITENAME }}" />
+    <meta property="og:type" content="radio_station" />
+    <meta property="music:creator" content="gikme" />
     <link href='{{ SITEURL }}' rel='canonical'/>
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel='icon' type='image/x-icon' href='/favicon.ico'/>
