--- a/site/themes/gikme/templates/base.html
+++ b/site/themes/gikme/templates/base.html
@@ -107,6 +107,8 @@
         }());
     </script>
     {% endif %}
+    <script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
+    <script type="text/javascript" src="{{ SITEURL }}/theme/js/main.js"></script>
 {% include 'analytics.html' %}
 </body>
 </html>
