--- a/site/themes/gikme/static/css/screen.css
+++ b/site/themes/gikme/static/css/screen.css
@@ -66,14 +66,13 @@ body {
 }
 
 header, #wrapper {
-    width: 910px;
+    width: 100%;
     margin: auto;
     background: #ffffff;
-    padding: 0 20px;
 }
 header{
     background: #E3D783;
-    padding-bottom: 20px;
+    padding: 0 0 20px 20px;
     height: 106px;
     /*box-shadow: 0 1px 0 2px #999999;*/
 }
@@ -100,6 +99,7 @@ header:after,
 #wrapper {
     background: #ffffff;
     box-shadow: inset 0 3px 3px 0 #cccccc;
+    padding: 0 20px;
 }
 a {
     text-decoration: none;
@@ -290,8 +290,9 @@ form.inline_edit {
 nav {
     float: right;
     list-style: none;
-    margin: 0 0 0 3em;
+    margin: 0 20px 0 0;
     padding: 0;
+    background: #E3D783;
 }
 nav li {
     float: left;
@@ -400,21 +401,46 @@ footer p { margin: 0; }
 .sidebar-block img{
     display: inline-block;
 }
+.sidebar-block__content-item{
+    display: inline-block;
+    margin-left: 15px;
+}
+
+#vk_groups{
+    margin: auto;
+}
 
 
 @media only screen and (min-width: 1200px){
-    #wrapper,
     header{
-      width: 1200px;
+      width: 1180px;
+    }
+    #wrapper{
+      width: 1160px;
     }
     #content {
-      width: 910px;
+      width: 870px;
       float: right;
-      margin-right: -910px;
+      margin-right: -870px;
     }
     #sidebar {
         width: 250px;
         float: right;
-        margin-left: 950px;
+        margin-left: 910px;
+    }
+    .sidebar-block__content-item{
+        display: list-item;
+        margin-left: 0;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    header{
+        height: auto;
+    }
+    nav{
+        float: none;
+        clear: both;
+        display: block;
     }
 }
