Added news category

--- a/site/themes/gikme/templates/article_template.html
+++ b/site/themes/gikme/templates/article_template.html
@@ -12,7 +12,7 @@
                 {% endif %}
                 {% if article.image -%}
                 <div class="post__image">
-                    <img src="{{article.image}}" alt="{% if article.title %}{{article.title}}{% else %}gik.me episode image{% endif %}"/>
+                    <img src="{% if not article.image.startswith('http') %}{{SITEURL}}{% endif %}{{article.image}}" alt="{% if article.title %}{{article.title}}{% else %}gik.me episode image{% endif %}"/>
                 </div>
                 {% endif %}
                 {%- block article_content %}{% endblock -%}
