--- a/site/themes/gikme/templates/base.html
+++ b/site/themes/gikme/templates/base.html
@@ -3,7 +3,7 @@
 {%- endmacro -%}
 
 <!DOCTYPE html>
-<html lang="{{ DEFAULT_LANG }}">
+<html lang="{{ DEFAULT_LANG }}" prefix="og: http://ogp.me/ns#" prefix="ya: https://webmaster.yandex.ru/vocabularies/">
 <head>
     {% block head %}
     <meta charset="utf-8" />
