--- a/site/themes/gikme-light/templates/archives.html
+++ b/site/themes/gikme-light/templates/archives.html
@@ -16,7 +16,7 @@
                     <div class="post archives">
                         <ul>
                         {% for article in month_group %}
-                            <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
+                            <li><a href="{{ SITEURL }}/{{ article.url }}" class="link">{{ article.title }}</a></li>
                         {% endfor %}
                         </ul>
                     </div>
