--- a/site/themes/gikme-light/src/stylus/article/article.styl
+++ b/site/themes/gikme-light/src/stylus/article/article.styl
@@ -9,7 +9,14 @@
 	&__title
 		margin 0
 		font-size header-fs
+		
+	&__link
+		text-decoration none
+		color font-color
 	
+	&__image
+		width 100%
+
 	&__date
 		font-size meta-fs
 		color meta-color
@@ -17,6 +24,12 @@
 	
 	&__content
 		margin-top 20px
+		
+		img
+			max-width 100%
+		
+		a
+			@extend .link
 		
 	&__footer 
 		margin-top 30px
