--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -4,7 +4,7 @@
         {% block head %}
             <meta charset="utf-8">
             <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
-            <link rel="stylesheet" href="static/css/main.css">
+            <link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css">
             <meta property="og:site_name" content="{{ SITENAME }}" />
             <meta property="og:type" content="radio_station" />
             <meta property="og:music:creator" content="gikme" />
@@ -192,7 +192,7 @@
             </script>
         {% endif %}
         <script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
-        <script type="text/javascript" src="static/js/main.js"></script>
+        <script type="text/javascript" src="{{ SITEURL }}/theme/js/main.js"></script>
         {% include 'analytics.html' %}
     </body>
 </html>
