--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -170,8 +170,8 @@
                     <div id="vk_groups"></div>
                 </div>
                 <div class="sidebar__item">
-                    Хостинг <a href="#" class="link">FastVPS</a><br>
-                    и <a href="#" class="link">Digital Ocean</a>
+                    Хостинг <a href="https://bill2fast.com/aff.php?aff=3332" class="link" target="_blank">FastVPS</a><br>
+                    и <a href="https://www.digitalocean.com/?refcode=00e18fbdd21a" class="link" target="_blank">Digital Ocean</a>
                 </div>
             </aside>
         </div>
