--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -66,6 +66,8 @@
                 <a
                     href="{{SITEURL}}/archives.html"
                     class="header__menu-item {% if output_file == "archives.html" %} header__menu-item_active {% endif %}">Архив</a>
+
+                <a class="header__menu-item" href="http://ave.gik.me/" target="_blank">Аватарки</a>
                 {% if DISPLAY_PAGES_ON_MENU %}
                     {% for page in PAGES %}
                         <a
