--- a/site/themes/gikme-light/templates/article.html
+++ b/site/themes/gikme-light/templates/article.html
@@ -37,7 +37,7 @@
 {% include "article_stub.html" %}
 
 {% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
-  <div id="disqus_thread"></div>
+  <div class="comments" id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_shortname = '{{ DISQUS_SITENAME }}';
     var disqus_identifier = '{{ article.url }}';
