--- a/site/themes/gikme-light/templates/player.html
+++ b/site/themes/gikme-light/templates/player.html
@@ -1,7 +1,15 @@
-{% if article.enclosure and article.mime.startswith('audio') %}
-<div class="audio-player">
-    <audio controls="" tabindex="0">
-    <source src="{{article.enclosure}}" type="{{article.mime}}"></source>
-    </audio>
-</div>
+{% if article.enclosure %}
+    {% if article.mime.startswith('audio') %}
+        <div class="audio-player">
+            <audio controls="" tabindex="0">
+            <source src="{{article.enclosure}}" type="{{article.mime}}"></source>
+            </audio>
+        </div>
+    {% elif article.mime.startswith('video') %}
+        <div class="video-player">
+            <video controls="" tabindex="0">
+            <source src="{{article.enclosure}}" type="{{article.mime}}"></source>
+            </video>
+        </div>
+    {% endif %}
 {% endif %}
