fix disquss link in post list

--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -47,7 +47,7 @@
     <body class="page">
 
         <header class="header">
-            <a href="/"><h1 class="header__logo">Gik me</h1></a>
+            <a href="{{SITEURL}}"><h1 class="header__logo">Gik me</h1></a>
             <nav class="header__menu">
                 {% if MENUITEMS %}
                     {% for item in MENUITEMS %}
