--- a/site/themes/gikme-light/static/css/main.css
+++ b/site/themes/gikme-light/static/css/main.css
@@ -345,6 +345,9 @@ table {
   color: #3a3e41;
   position: relative;
   margin-left: 40px;
+  height: 38px;
+  line-height: 38px;
+  vertical-align: middle;
   -webkit-transition: opacity 300ms;
           transition: opacity 300ms;
 }
