--- a/site/themes/gikme-light/templates/article.html
+++ b/site/themes/gikme-light/templates/article.html
@@ -5,14 +5,17 @@
     {% if article.mime.startswith('audio') %}
         <meta property="og:type" content="music.radio_station" />
         <meta property="og:audio" content="{{article.enclosure}}" />
-        <meta property="og:music:creator" content="gik.me podcast" />
         <meta property="og:audio:type" content="{{article.mime}}" />
     {% elif article.mime.startswith('video') %}
         <meta property="og:type" content="video.other" />
         <meta property="og:video" content="{{article.enclosure}}" />
         <meta property="og:video:type" content="{{article.mime}}" />
     {% else %}
-        {{super()}}
+        <meta property="og:type" content="article" />
+        <meta property="og:article:author:username" content="gikme" />
+        {% for tag in article.tags %}
+            <meta property="og:article:tag" content="{{tag}}" />
+        {% endfor %}
     {% endif %}
   {% endif %}
 {% endblock %}
