--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css"/>
             <meta property="og:site_name" content="{{ SITENAME }}" />
             {% block og_type %}
-                <meta property="og:type" content="radio_station" />
+                <meta property="og:type" content="website" />
             {% endblock %}
             <link rel="shortcut icon" href="/favicon.ico" />
             <link rel='icon' type='image/x-icon' href='/favicon.ico'/>
