--- a/site/themes/gikme-light/templates/base.html
+++ b/site/themes/gikme-light/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="window" lang="{{ DEFAULT_LANG }}" prefix="og: http://ogp.me/ns#" prefix="ya: https://webmaster.yandex.ru/vocabularies/">
+<html class="window" lang="{{ DEFAULT_LANG }}" prefix="og: http://ogp.me/ns#" prefix="ya: https://webmaster.yandex.ru/vocabularies/" {% block head_prefixes %}{% endblock %}>
     <head>
         {% block head %}
             <meta charset="utf-8">
