--- a/site/themes/gikme-light/templates/article.html
+++ b/site/themes/gikme-light/templates/article.html
@@ -3,12 +3,12 @@
 {%- block head_prefixes %}
     {%- if article.mime %}
         {%- if article.mime.startswith('audio') %}
-            prefix="http://ogp.me/ns/music#"
+            prefix="og:audio: http://ogp.me/ns/music#"
         {%- elif article.mime.startswith('video') -%}
-            prefix="http://ogp.me/ns/video#"
+            prefix="og:video: http://ogp.me/ns/video#"
         {% endif -%}
     {%- else -%}
-        prefix="http://ogp.me/ns/article#"
+        prefix="og:article: http://ogp.me/ns/article#"
     {% endif -%}
 {% endblock -%}
 
