--- a/site/themes/gikme-light/templates/article.html
+++ b/site/themes/gikme-light/templates/article.html
@@ -18,7 +18,7 @@
             <meta property="og:type" content="music.radio_station" />
             <meta property="og:audio" content="{{article.enclosure}}" />
             <meta property="og:audio:type" content="{{article.mime}}" />
-            <meta property="music.creator" content="https://www.facebook.com/pages/gikme/137607762942824"/>
+            <meta property="music:creator" content="https://www.facebook.com/pages/gikme/137607762942824"/>
         {% elif article.mime.startswith('video') %}
             <meta property="og:type" content="video.other" />
             <meta property="og:video" content="{{article.enclosure}}" />
